--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
             </div>
         </div>
     </div>
-    <script src="/script/scripts.js"></script>
+    <script src="script/scripts.js"></script>
 </body>
 </html>
