Iphone 5s show/hide reviews

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li><i class="fa fa-star" aria-hidden="true"></i></li>
                         <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <h5>59,322 REVIEWS</h5>
+                    <h5><span class="desktop">59,322</span> <span class="mobile">59K</span> REVIEWS</h5>
                 </div>
                 <div class="ratings">
                     <h3 class="heading-font">67,924 <i class="fa fa-diamond" aria-hidden="true"></i></h3>
@@ -113,7 +113,7 @@
                         <li><i class="fa fa-star" aria-hidden="true"></i></li>
                         <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <h5>59,322 REVIEWS</h5>
+                    <h5><span class="desktop">59,322</span> <span class="mobile">59K</span> REVIEWS</h5>
                 </div>
                 <div class="ratings">
                     <h3 class="heading-font">67,924 <i class="fa fa-diamond" aria-hidden="true"></i></h3>
